--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -1227,10 +1227,12 @@ h1, h2, h3, h4, h5, h6 {
   .banner-area .active-banner-slider .owl-nav {
     position: absolute;
     right: 0;
-    bottom: -200px; }
+    bottom: -50px;
+    }
     @media (max-width: 1920px) {
       .banner-area .active-banner-slider .owl-nav {
-        right: -115px; } }
+        right: -119px;
+        } }
     @media (max-width: 1680px) {
       .banner-area .active-banner-slider .owl-nav {
         right: 0px; } }
