--- a/Views/userViews/checkout.ejs
+++ b/Views/userViews/checkout.ejs
@@ -644,7 +644,11 @@
                         text: response.error,
                         icon: 'error',
                         timer: 5000
-                    })
+                    }).then((result) => {
+                            
+                        location.href = '/';
+                        
+                    });
                 }
             }
         })
