--- a/Views/adminViews/bannerManagement.ejs
+++ b/Views/adminViews/bannerManagement.ejs
@@ -35,13 +35,17 @@
     <tbody>
       <% banners.forEach(function(banner) { %>
         <tr>
-          <td style="width: 200px; height: 100px;">
-            <img src="/banner-images/<%= banner.image %>" alt="Banner Image" style="width: 200px; height: 100px; border-radius: 0;">
+          <td style="width: 200px; height: 200px;">
+            <img src="/banner-images/<%= banner.image %>" alt="Banner Image" style="width: 200px; height: 200px; border-radius: 0;">
           </td>
           <td><%= banner.title %></td>
           
           
-          <td><%= banner.description %></td>
+          <td>
+            <span data-bs-toggle="tooltip" data-bs-placement="top" title="<%= banner.description %>" style="display: inline-block; max-width: 250px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+              <%= banner.description %>
+            </span>
+          </td>
           <td><i class="mdi mdi-pencil"></i></td>
           <td><a href="/admin/deleteBanner?id=<%= banner._id %>"><i class="mdi mdi-delete"></i></a></td>
         </tr>
