--- a/Views/layouts/adminHeader.ejs
+++ b/Views/layouts/adminHeader.ejs
@@ -38,7 +38,7 @@
             <span class="nav-link">Navigation</span>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="/admin">
+            <a class="nav-link" href="/admin/landing">
               <span class="menu-icon">
                 <i class="mdi mdi-speedometer"></i>
               </span>
@@ -94,6 +94,14 @@
             <span class="menu-title">Banner</span>
             </a>
         </li>
+        <li class="nav-item menu-items">
+          <a class="nav-link" href="/admin/salesReport">
+          <span class="menu-icon">
+              <i class="mdi mdi-playlist-play"></i>
+          </span>
+          <span class="menu-title">Sales Report</span>
+          </a>
+      </li>
         </ul>
       </nav>
       <!-- partial -->
