--- a/Views/userViews/landing.ejs
+++ b/Views/userViews/landing.ejs
@@ -122,49 +122,31 @@
 	<!-- start banner Area -->
 	<section class="banner-area">
 		<div class="container">
-			<div class="row fullscreen align-items-center justify-content-start">
-				<div class="col-lg-12">
-					<div class="active-banner-slider owl-carousel">
-						<!-- single-slide -->
-						<div class="row single-slide align-items-center d-flex">
-							<div class="col-lg-5 col-md-6">
-								<div class="banner-content">
-									<h1>SCUF New <br>Collection!</h1>
-									<p>Performance gaming gear for serious player. Change your game, beat levels and win more with SCUF</p>
-									<!-- {{!-- <div class="add-bag d-flex align-items-center">
-										<a class="add-btn" href=""><span class="lnr lnr-cross"></span></a>
-										<span class="add-text text-uppercase">Add to Bag</span>
-									</div> --}} -->
-								</div>
-							</div> 
-							<div class="col-lg-7">
-								<div class="banner-img">
-									<img class="img-fluid" src="img/banner/product banner.png" alt="">
-								</div>
-							</div>
-						</div>
-						<!-- single-slide -->
-						<div class="row single-slide">
-							<div class="col-lg-5">
-								<div class="banner-content">
-									<h1>Nike New <br>Collection!</h1>
-									
-									<p>Lorem ipsum dolor sit amet, consectetur adipisi cing elit, sed do eiusmod tempor incididunt ut labore et
-										dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-									<div class="add-bag d-flex align-items-center">
-									
-							</div>
-							<div class="col-lg-7">
-								<div class="banner-img">
-									<img class="img-fluid" src="img/banner/product banner.png" alt="">
-								</div>
-							</div>
-						</div>
+		  <div class="row fullscreen align-items-center justify-content-start">
+			<div class="col-lg-12">
+			  <div class="active-banner-slider owl-carousel">
+				<% banners.forEach((banner) => { %>
+				<div class="row align-items-center d-flex">
+				  <div class="col-lg-5 col-md-6">
+					<div class="banner-content">
+					  <h1><%= banner.title %></h1>
+					  <br>
+					  <p><%= banner.description %></p>
 					</div>
+				  </div>
+				  <div class="col-lg-7">
+					<div class="banner-img">
+					  <img class="img-fluid" src="../banner-images/<%= banner.image %>" alt="" style="height: auto; width: auto;">
+					</div>
+				  </div>
 				</div>
+				<% }) %>
+			  </div>
 			</div>
+		  </div>
 		</div>
-	</section>
+	  </section>
+	  
 	<!-- End banner Area -->
 
 	<section class="brand-area   section_gap	" style="width: 100%;">
