--- a/Views/adminViews/categoryManagement.ejs
+++ b/Views/adminViews/categoryManagement.ejs
@@ -5,7 +5,7 @@
     <div class="page-header">
       <h3 class="page-title">Category Management</h3>
       <nav aria-label="breadcrumb">
-        <a href="/admin/addCategory" class="btn btn-primary btn-fw">Add Category</a>
+        <a href="/admin/addCategory" class="btn btn-lg btn-primary btn-fw">Add Category</a>
       </nav>
     </div>
     <div class="row">
