--- a/Views/adminViews/couponManagement.ejs
+++ b/Views/adminViews/couponManagement.ejs
@@ -5,7 +5,7 @@
 <div class="page-header">
 <h3 class="page-title">Coupon Management</h3>
 <nav aria-label="breadcrumb">
-<a href="/admin/addCoupon" class="btn btn-primary btn-fw">Add Coupon</a>
+<a href="/admin/addCoupon" class="btn btn-lg btn-primary btn-fw">Add Coupon</a>
 </nav>
 </div>
 <div class="row">
