--- a/Views/adminViews/productManagement.ejs
+++ b/Views/adminViews/productManagement.ejs
@@ -7,7 +7,7 @@
               
               <nav aria-label="breadcrumb">
                  <!-- {{!-- <input type="submit" class="btn btn-primary btn-fw" href="/admin/addProduct">Add Product</input> --}} -->
-                 <a href="/admin/addProduct" class="btn btn-primary btn-fw">Add Product</a>
+                 <a href="/admin/addProduct" class="btn btn-lg btn-primary btn-fw">Add Product</a>
                 <!-- {{!-- <ol class="breadcrumb">
                   <li class="breadcrumb-item"><a href="#">Tables</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Basic tables</li>
