--- a/Views/userViews/orders.ejs
+++ b/Views/userViews/orders.ejs
@@ -83,7 +83,7 @@
                                         <h5><span style="color: black;">Payment method: </span><%= item.orders.paymentMethod %></h5>
                                     </div>
                                     <div class="col-lg-4" style="margin-top:20px;">
-                                        <a id="btn" href="/orderDetails?id=<%= item._id %>">SHOW DETAILS</a>
+                                        <a id="btn" href="/orderDetails?id=<%= item.orders._id %>">SHOW DETAILS</a>
                                     </div>
                                 </div>
                             </div>
