--- a/Views/adminViews/adminDashboard.ejs
+++ b/Views/adminViews/adminDashboard.ejs
@@ -1,9 +1,251 @@
-<%- include('../layouts/adminHeader.ejs') %>
+    <%- include('../layouts/adminHeader.ejs') %>
 
-<div class="main-panel">
-    <div class="content-wrapper">
-      
+    <head>
+        <meta charset="utf-8">
+        <title>Evara Dashboard</title>
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:title" content="">
+        <meta property="og:type" content="">
+        <meta property="og:url" content="">
+        <meta property="og:image" content="">
+        <!-- Favicon -->
+        <link rel="shortcut icon" type="image/x-icon" href="../admin-assets/imgs/theme/favicon.svg">
+        <!-- Template CSS -->
+        <link href="../admin-assets/css/main.css" rel="stylesheet" type="text/css" />
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    </head>
+
+    <div class="main-panel">
+        <div class="content-wrapper">
+            <div class="row">
+                <div class="col-xl-3 col-sm-12 grid-margin stretch-card">
+                    <div class="card">
+                        <div class="card-body">
+                          <h5>Revenue</h5>
+                          <div class="row">
+                            <div class="col-8 col-sm-12 col-xl-8 my-auto">
+                              <div class="d-flex d-sm-block d-md-flex align-items-center">
+                                <h2 class="mb-0">₹<%= orders[0].totalPriceSum %></h2>
+                                <p class="text-success ml-2 mb-0 font-weight-medium">+</p>
+                              </div>
+                              <h6 class="text-muted font-weight-normal">Since last month</h6>
+                            </div>
+                            <div class="col-4 col-sm-12 col-xl-4 text-center text-xl-right">
+                              <i class="mdi mdi-cash-multiple"></i>
+                            </div>
+                          </div>
+                          </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-sm-12 grid-margin stretch-card">
+                  <div class="card">
+                      <div class="card-body">
+                        <h5>Products</h5>
+                        <div class="row">
+                          <div class="col-8 col-sm-12 col-xl-8 my-auto">
+                            <div class="d-flex d-sm-block d-md-flex align-items-center">
+                              <h2 class="mb-0"><%= productsCount %></h2>
+                              <p class="text-success ml-2 mb-0 font-weight-medium">+</p>
+                            </div>
+                            <h6 class="text-muted font-weight-normal">From <%=categoryCount%> categories</h6>
+                          </div>
+                          <div class="col-4 col-sm-12 col-xl-4 text-center text-xl-right">
+                            <i class="mdi mdi-wallet-travel"></i>
+                          </div>
+                        </div>
+                        </div>
+                  </div>
+              </div>
+              <div class="col-xl-3 col-sm-12 grid-margin stretch-card">
+                <div class="card">
+                    <div class="card-body">
+                      <h5>Orders</h5>
+                      <div class="row">
+                        <div class="col-8 col-sm-12 col-xl-8 my-auto">
+                          <div class="d-flex d-sm-block d-md-flex align-items-center">
+                            <h2 class="mb-0"><%= orders[0].count %></h2>
+                            <p class="text-success ml-2 mb-0 font-weight-medium">+</p>
+                          </div>
+                          <h6 class="text-muted font-weight-normal">Delivered Orders</h6>
+                        </div>
+                        <div class="col-4 col-sm-12 col-xl-4 text-center text-xl-right">
+                          <i class="mdi mdi-truck-delivery"></i>
+                        </div>
+                      </div>
+                      </div>
+                </div>
+            </div>
+
+            <div class="col-xl-3 col-sm-12 grid-margin stretch-card">
+              <div class="card">
+                  <div class="card-body">
+                    <h5>Online Earning</h5>
+                    <div class="row">
+                      <div class="col-8 col-sm-12 col-xl-8 my-auto">
+                        <div class="d-flex d-sm-block d-md-flex align-items-center">
+                          <h2 class="mb-0">₹<%= onlinePay[0].totalPriceSum %></h2>
+                          <p class="text-success ml-2 mb-0 font-weight-medium">+</p>
+                        </div>
+                        <h6 class="text-muted font-weight-normal">Online Earning from <%= onlinePay[0].count %> payments</h6>
+                      </div>
+                      <div class="col-4 col-sm-12 col-xl-4 text-center text-xl-right">
+                        <i class="mdi mdi-qrcode-scan"></i>
+                      </div>
+                    </div>
+                    </div>
+              </div>
+          </div>
+                
+            </div> 
+
+
+            <div class="row">
+                <div class="col-lg-6 grid-margin stretch-card">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Sale Statistics</h4>
+                            <canvas id="salesChart" style="height:250px"></canvas>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 grid-margin stretch-card">
+                    <div class="card">
+                      <div class="card-body">
+                        <h4 class="card-title">Orders Based on date</h4>
+                        <canvas id="salesCount" style="height:230px"></canvas>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+
+
+            <div class="row ">
+              <div class="col-12 grid-margin">
+                <div class="card">
+                  <div class="card-body">
+                    <h4 class="card-title">Latest Orders</h4>
+                    <div class="table-responsive">
+                      <table class="table">
+                        <thead>
+                          <tr>
+                            <th>#ID</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Total</th>
+                            <th scope="col">Status</th>
+                            <th scope="col">Date</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <% order.forEach(function(order,index) {%>
+                          <tr>
+                            <td><%=order.orders._id%></td>
+                            <td><b><%=order.orders.name%></b></td>
+                            <td>₹<%=order.orders.totalPrice%></td>
+                            <td>
+                              <% if (order.orders.orderStatus == 'Placed') { %>
+                                  <div class="badge badge-outline-primary"><%= order.orders.orderStatus %></div>
+                              <% } else if (order.orders.orderStatus == 'Dispatched') { %>
+                                  <div class="badge rounded-pill alert-info"><%= order.orders.orderStatus %></div>
+                              <% } else if (order.orders.orderStatus == 'Cancel Requested' ) { %>
+                                  <div class="badge rounded-pill alert-warning"><%= order.orders.orderStatus %></div>
+                              <% } else if (order.orders.orderStatus == 'Delivered') { %>
+                                  <div class="badge badge-outline-success"><%= order.orders.orderStatus %></div>
+                              <% } else if (order.orders.orderStatus == 'Return Requested' ) { %>
+                                  <div class="badge rounded-pill alert-warning"><%= order.orders.orderStatus %></div>
+                              <% } else { %>
+                                  <div class="badge rounded-pill alert-danger"><%= order.orders.orderStatus %></div>
+                              <% } %>
+                              </td>
+                            <td><%=order.orders.createdAt.toLocaleString()%></td>
+                          </tr>
+                          <% }) %>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
     </div>
-</div>
 
-<%- include('../layouts/adminFooter.ejs') %>
+    <%- include('../layouts/adminFooter.ejs') %>
+    <script src="/Public/assets/js/chart.js"></script>
+    <script src="/Public/assets/vendors/chart.js/Chart.min.js"></script>
+
+    <script>
+      const salesData = JSON.parse('<%- JSON.stringify(salesData) %>');
+      console.log("salesdata");
+
+      const dates = salesData.map(item => item._id);
+      const dailySales = salesData.map(item => item.dailySales);
+
+      const ctx = document.getElementById('salesChart').getContext('2d');
+      new Chart(ctx, {
+        type: 'line',
+        data: {
+          labels: dates,
+          datasets: [{
+            label: 'Daily Sales',
+            data: dailySales,
+            backgroundColor: 'rgba(75, 192, 192, 0.2)',
+            borderColor: 'rgba(75, 192, 192, 1)',
+            borderWidth: 1
+          }]
+        },
+        options: {
+          responsive: true,
+          scales: {
+            y: {
+              beginAtZero: true
+            }
+          }
+        }
+      });
+  </script>
+
+  <script>
+      const salesCount = JSON.parse('<%- JSON.stringify(salesCount) %>');
+
+  const date = salesCount.map(item => item._id);
+  const orderCounts = salesCount.map(item => item.orderCount);
+
+  const ctxs = document.getElementById('salesCount').getContext('2d');
+  new Chart(ctxs, {
+  type: 'bar',
+  data: {
+  labels: date,
+  datasets: [{
+    label: 'Orders per Date',
+    data: orderCounts,
+    backgroundColor: 'rgba(75, 192, 192, 0.2)',
+    borderColor: 'rgba(75, 192, 192, 1)',
+    borderWidth: 1
+  }]
+  },
+  options: {
+  responsive: true,
+  scales: {
+    y: {
+      beginAtZero: true
+    },
+    x: {
+      // Set the x-axis options as needed (e.g., for date labels)
+    }
+  }
+  }
+  });
+      
+  </script>
+
+        <script src="../admin-assets/js/vendors/jquery-3.6.0.min.js"></script>
+        <script src="../admin-assets/js/vendors/bootstrap.bundle.min.js"></script>
+        <script src="../admin-assets/js/vendors/select2.min.js"></script>
+        <script src="../admin-assets/js/vendors/perfect-scrollbar.js"></script>
+        <script src="../admin-assets/js/vendors/jquery.fullscreen.min.js"></script>
+        <script src="../admin-assets/js/vendors/chart.js"></script>
+        <!-- Main Script -->
+        <script src="../admin-assets/js/main.js" type="text/javascript"></script>
+        <script src="../admin-assets/js/custom-chart.js" type="text/javascript"></script>
