--- a/Views/adminViews/bannerManagement.ejs
+++ b/Views/adminViews/bannerManagement.ejs
@@ -7,7 +7,7 @@
       
       <nav aria-label="breadcrumb">
          <!-- {{!-- <input type="submit" class="btn btn-primary btn-fw" href="/admin/addProduct">Add Product</input> --}} -->
-         <a href="/admin/addBanner" class="btn btn-primary btn-fw">Add Banner</a>
+         <a href="/admin/addBanner" class="btn btn-lg btn-primary btn-fw">Add Banner</a>
         <!-- {{!-- <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="#">Tables</a></li>
           <li class="breadcrumb-item active" aria-current="page">Basic tables</li>
@@ -46,7 +46,7 @@
               <%= banner.description %>
             </span>
           </td>
-          <td><i class="mdi mdi-pencil"></i></td>
+          <td><a href="/admin/updateBannerGet?id=<%= banner._id %>"><i class="mdi mdi-pencil"></i></a></td>
           <td><a href="/admin/deleteBanner?id=<%= banner._id %>"><i class="mdi mdi-delete"></i></a></td>
         </tr>
       <% }); %>
