--- a/Views/adminViews/orderData.ejs
+++ b/Views/adminViews/orderData.ejs
@@ -7,51 +7,29 @@
       <h3 class="page-title">Order Details</h3>
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/admin/product">Order Management</a></li>
+          <li class="breadcrumb-item"><a href="/admin/order">Order Management</a></li>
           <li class="breadcrumb-item active" aria-current="page">View Order</li>
         </ol>
       </nav>
     </div>
     <div style="overflow-x: auto; -webkit-overflow-scrolling: touch;">
       <div class="row-lg-12">
-        <div class="col-md-6 col-xl-4 grid-margin stretch-card">
-          <% products.forEach(function(product) { %>
-          <div class="card ml-3">
-            <div class="card-body">
-              <h4 class="card-title">Portfolio Slide</h4>
-              <div class="owl-carousel owl-theme full-width owl-carousel-dash portfolio-carousel" id="owl-carousel-basic">
+        <div class="col-lg-3 grid-margin stretch-card">
+          <% for (let i = 0; i < products.length; i++) { %>
+            <div class="card ml-3">
+              <div class="card-body">
+                <h4 class="card-title"><%= products[i].productName %></h4>
                 <div class="item">
-                  <img src="assets/images/dashboard/Rectangle.jpg" alt="">
+                  <center>
+                    <img src="/product-images/<%= orders[i].productData[0] %>" alt="" style="height: 200px; width: 200px;">
+                  </center>
                 </div>
-                <div class="item">
-                  <img src="assets/images/dashboard/Img_5.jpg" alt="">
+                <div class="flex-grow">
+                  <p class="text-muted">₹<%= products[i].productPrice %> x <%= products[i].quantity %></p>
                 </div>
-                <div class="item">
-                  <img src="assets/images/dashboard/img_6.jpg" alt="">
-                </div>
-              </div>
-              <div class="d-flex py-4">
-                <div class="preview-list w-100">
-                  <div class="preview-item p-0">
-                    <div class="preview-item-content d-flex flex-grow">
-                      <div class="flex-grow">
-                        <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                          <h6 class="preview-subject"><%= product.productName %></h6>
-                          <p class="text-muted text-small"></p>
-                        </div>
-                        <p class="text-muted">₹<%= product.productPrice %> x <%= product.quantity %></p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <p class="text-muted">Well, it seems to be working now. </p>
-              <div class="progress progress-md portfolio-progress">
-                <div class="progress-bar bg-success" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
-          </div>
-          <% }); %>
+          <% }; %>
         </div>
       </div>
 
@@ -68,6 +46,7 @@
                         <% products.forEach(function(product) { %>
                         <tr>
                           <td><%= product.productName %></td>
+
                           <td class="text-right"> ₹<%= product.productPrice %> </td>
                           <td class="text-right font-weight-medium">  <%= product.quantity %></td>
                         </tr>
@@ -80,10 +59,10 @@
                   <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded mt-3">
                     <div class="text-md-center text-xl-left">
                       <h6 class="mb-2">Order Details</h6>
-                      <p class="text-muted mb-0"><span style="color: aliceblue;">ID :</span> <%= orders._id %></p>
-                      <p class="text-muted mb-0"><span style="color: aliceblue;">Payment Method :</span> <%= orders.paymentMethod %></p>
-                      <p class="text-muted mb-0"><span style="color: aliceblue;">Order Status :</span> <%= orders.orderStatus %></p>
-                      <p class="text-muted mb-0"><span style="color: aliceblue;">Date of order :</span> <%= orders.date %></p>
+                      <p class="text-muted mb-0"><span style="color: aliceblue;">ID :</span> <%= orders[0].orders._id %></p>
+                      <p class="text-muted mb-0"><span style="color: aliceblue;">Payment Method :</span> <%= orders[0].orders.paymentMethod %></p>
+                      <p class="text-muted mb-0"><span style="color: aliceblue;">Order Status :</span> <%= orders[0].orders.orderStatus %></p>
+                      <p class="text-muted mb-0"><span style="color: aliceblue;">Date of order :</span> <%= new Date(orders[0].orders.createdAt).toLocaleDateString('en-US') %> </p>
                       <br>
                       <h6 class="mb-2">Billing Details</h6>
                       <p class="text-muted mb-0"><span style="color: aliceblue;">Name :</span> <%= orders.name %></p>
@@ -93,7 +72,7 @@
                       <p class="text-muted mb-0"><span style="color: aliceblue;">Postcode :</span> <%= address.item.pin %></p>
                     </div>
                     <div class=" flex-grow text-right text-md-center text-xl-right py-md-2 py-xl-0">
-                      <h6 class="font-weight-bold mb-0">₹<%= orders.totalPrice %></h6>
+                      <h6 class="font-weight-bold mb-0">₹<%= orders[0].orders.totalPrice %></h6>
                     </div>
                   </div>
                 </div>
