--- a/Views/adminViews/salesReport.ejs
+++ b/Views/adminViews/salesReport.ejs
@@ -4,7 +4,22 @@
 <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
 <%- include('../layouts/adminHeader.ejs') %>
-
+<style>
+    input {
+  display: block;
+  width: 100%;
+  height: 2.875rem;
+  padding: 0.56rem 0.75rem;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1;
+  color: #ffffff;
+  background-color: #2c2e33;
+  background-clip: padding-box;
+  border: 1px solid #2c2e33;
+  border-radius: 2px;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
+</style>
 
 
 <!-- partial -->
@@ -14,16 +29,20 @@
             <h3 class="page-title"> Sales Report </h3>
             
 
-            <div class="card">
-                <div class="card-body">
-              
+          
+        </div>  
+        <div class="row">
+            <div class="card col-4 ml-5 mb-5" style="width: 500px;">
+                <div class="card-body ">
+            
                     <div>
-                        <form action="/admin/salesReport" method="POST" id="salesReport">
+                        <form class="form-control-md" action="/admin/salesReportPost" method="POST" id="salesReport">
                             <center>
                                 <div>
                                     <input type="date" name="startdate" id="startdate" placeholder="Start Date" class="flatpickr">
                                 </div>
                                 <span id="date-error1" style="display: none; color: red;">Invalid Start Date</span>
+                                <br>
                             
                                 <div>
                                     <input type="date" name="enddate" id="enddate" placeholder="End Date" class="flatpickr">
@@ -33,7 +52,7 @@
                                 <br>
 
                                 <div>
-                                    <button class="btn-sm btn-info" type="submit" id="submit-button">Submit</button>
+                                    <button class="btn-sm btn-light" type="submit" id="submit-button">Submit</button>
                                 </div>
                             
                             </center>
@@ -41,11 +60,13 @@
                     </div>
                 </div>
             </div>
-            <div class="text-center">
-                <button type="button" class="btn btn-secondary btn_print m-3" value="Download as Pdf"><i class="fas fa-file-pdf"></i> Download as PDF</button>
-                <button type="button" class="btn btn-secondary btn_print m-3" onclick="export_data()" value="Export to excel"><i class="fas fa-file-excel"></i> Download as Excel</button>
+            <div class="col-4">
+                <button type="button" class="btn btn-lg btn-primary btn-icon-text m-3" value="Download as Pdf"><i class="fas fa-file-pdf"></i> Download as PDF</button>
+                <!-- <button type="button" class="btn btn-primary btn-icon-text" value="Download as Pdf"> <i class="fas fa-file-pdf"></i>Download PDF <i class="mdi mdi-file-check btn-icon-prepend"></i></button> -->
+                <button type="button" class="btn btn-lg btn-primary btn_print m-3" onclick="export_data()" value="Export to excel"><i class="fas fa-file-excel"></i> Download as Excel</button>
             </div>
         </div>
+
         <!--Order list-->
         <div class="row ">
             <div class="col-12 grid-margin">
@@ -53,7 +74,7 @@
                     <div class="card-body">
                     <h4 class="card-title">Sales List</h4>
                         <div class="table-responsive">
-                            <table class="table">
+                            <table class="table" id="container_content">
                                 <thead>
                                     <tr>
                                         <th scope="col">OrderId</th>
@@ -85,7 +106,9 @@
                 </div>
             </div>
         </div>
+       
     </div>
+
 </div>
 <!--Order list-->
 
@@ -183,3 +206,4 @@
               XLSX.writeFile(fp, 'test.xlsx');
           }
   </script>
+ 
