--- a/Views/layouts/adminHeader.ejs
+++ b/Views/layouts/adminHeader.ejs
@@ -95,7 +95,7 @@
             </a>
         </li>
         <li class="nav-item menu-items">
-          <a class="nav-link" href="/admin/salesReport">
+          <a class="nav-link" href="/admin/salesReportGet">
           <span class="menu-icon">
               <i class="mdi mdi-playlist-play"></i>
           </span>
@@ -125,8 +125,8 @@
             </ul>
             <ul class="navbar-nav navbar-nav-right">
               <li class="nav-item dropdown d-none d-lg-block">
-                <a class="nav-link btn btn-success create-new-button" id="createbuttonDropdown" aria-expanded="false" href="/admin/logout" >
-                  <i class="mdi mdi-logout-variant" ></i>Logout</a>
+                <a class=" btn btn-outline-light btn-fw" id="createbuttonDropdown" aria-expanded="false" href="/admin/logout" >
+                  <i > LOG OUT</i></a>
               </li> 
             </ul>
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
