--- a/Views/userViews/cart.ejs
+++ b/Views/userViews/cart.ejs
@@ -68,7 +68,7 @@
                                 <td>
                                     <div class="media">
                                         <div class="d-flex">
-                                            <img src="../product-images/<%= item.carted.image[0] %>" alt="" style="height: 100px; width: 100px">
+                                            <img src="../product-images/<%= item.carted.image[0] %>" alt="" style="height: 100px; width: 100px; border: 1px solid #eeeeee;">
                                         </div>
                                         <div class="media-body">
                                             <p><%= item.carted.name %></p>
@@ -118,7 +118,7 @@
                                 <td>
                                     <div class="checkout_btn_inner d-flex align-items-center">
                                         <a class="gray_btn" href="/">Continue Shopping</a>
-                                        <a class="primary-btn" href="/checkout">Proceed to checkout</a>
+                                        <a class="primary-btn" href="/checkout">Checkout</a>
                                     </div>
                                 </td>
                             </tr>
