--- a/Views/adminViews/addProduct.ejs
+++ b/Views/adminViews/addProduct.ejs
@@ -21,15 +21,15 @@
             <form class="forms-sample" action="/admin/addProduct" method="POST" enctype="multipart/form-data">
               <div class="form-group">
                 <label for="exampleInputName1">Name</label>
-                <input type="text" class="form-control" id="exampleInputName1" placeholder="Name" name="name">
+                <input type="text" class="form-control" id="exampleInputName1" placeholder="Name" name="name" required>
               </div>
               <div class="form-group">
                 <label for="exampleInputEmail3">Brand</label>
-                <input type="text" class="form-control" id="exampleInputEmail3" placeholder="Brand" name="brand">
+                <input type="text" class="form-control" id="exampleInputEmail3" placeholder="Brand" name="brand"required>
               </div>
               <div class="form-group">
                 <label for="exampleSelectGender">Category</label>
-                <select class="form-control" id="exampleSelectGender" name="category">
+                <select class="form-control" id="exampleSelectGender" name="category" required>
                   <% category.forEach(function(item) { %>
                     <option value="<%= item._id %>"><%= item.name %></option>
                   <% }); %>
@@ -37,25 +37,25 @@
               </div>
               <div class="form-group">
                 <label for="exampleInputEmail3">Price</label>
-                <input type="number" class="form-control" id="exampleInputEmail3" placeholder="Price" name="price">
+                <input type="number" class="form-control" id="exampleInputEmail3" placeholder="Price" name="price" required>
               </div>
               <br>
               <div class="form-group">
                 <label for="productImage">Product Main Image:</label>
-                <input type="file" class="form-control" name="image1" id="image">
+                <input type="file" class="form-control" name="image1" id="image" required>
               </div>
               <br>
               <div class="form-group">
                 <label for="productImage">Product Sub Images:</label>
-                <input type="file" class="form-control" required multiple name="image2" id="image">
+                <input type="file" class="form-control"  multiple name="image2" id="image" required>
               </div>
               <div class="form-group">
                 <label for="exampleTextarea1">Description</label>
-                <textarea class="form-control" id="exampleTextarea1" rows="4" name="description"></textarea>
+                <textarea class="form-control" id="exampleTextarea1" rows="4" name="description" required></textarea>
               </div>
               <% if (typeof message !== 'undefined') { %>
 								<center>
-								<div class="audun_warn">
+								<div class="audun_warn" style="color: red;" >
 									<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
 									<%= message %>
 								</div>
