--- a/Views/adminViews/orderData.ejs
+++ b/Views/adminViews/orderData.ejs
@@ -12,9 +12,9 @@
         </ol>
       </nav>
     </div>
-    <div style="overflow-x: auto; -webkit-overflow-scrolling: touch;">
-      <div class="row-lg-12">
-        <div class="col-lg-3 grid-margin stretch-card">
+    <div >
+      <div class="row-lg-12" style=" overflow-y: scroll; ">
+        <div class="col-lg-3 grid-margin stretch-card" >
           <% for (let i = 0; i < products.length; i++) { %>
             <div class="card ml-3">
               <div class="card-body">
