--- a/Views/adminViews/updateProduct.ejs
+++ b/Views/adminViews/updateProduct.ejs
@@ -1,5 +1,18 @@
 	<%- include('../layouts/adminHeader.ejs') %>
 
+
+  <style>
+    .image {
+      width: 100px;
+      height: 100px;
+      border: 1px solid;
+      border-radius: 4px;
+      margin-right: 50px;
+      margin-left: 50px;
+
+
+    }
+  </style>
   <!-- partial -->
   <div class="main-panel">
     <div class="content-wrapper">
@@ -16,6 +29,7 @@
       </div>
       <div class="row">
         <div class="col-8 grid-margin stretch-card">
+          <div class="col-3"></div>
           <div class="card col-lg-6">
             <div class="card-body">
               <h4 class="card-title">Edit the details of the existing product</h4>
@@ -41,6 +55,18 @@
                   <input type="number" class="form-control" id="exampleInputEmail3" placeholder="Price" name="price" value="<%= product.price %>">
                 </div>
                 <br>
+                <div class="row">
+                  <div class="col-xl-lg-4-md-12 ml-5">
+                    <img class="image" src="/product-images/<%= product.image[0] %>" alt="Product Image">
+                  </div>
+                  <div class="col-xl-lg-4-md-12 ">
+                    <img class="image" src="/product-images/<%= product.image[1] %>" alt="Product Image">
+                  </div>
+                  <div class="col-xl-lg-4-md-12">
+                    <img class="image" src="/product-images/<%= product.image[2] %>" alt="Product Image">
+                  </div>
+                </div>
+                <br>
                 <div class="form-group">
                   <label for="productImage">Product Main Image:</label>
                   <input type="file" class="form-control" name="image1" id="image"> 
@@ -48,7 +74,7 @@
                 <br> 
                 <div class="form-group">
                   <label for="productImage">Product Sub Images:</label>
-                  <input type="file" class="form-control" required multiple name="image2" id="image"> 
+                  <input type="file" class="form-control" multiple name="image2" id="image"> 
                 </div>
                 <div class="form-group">
                   <label for="exampleTextarea1">Description</label>
