--- a/Views/userViews/address.ejs
+++ b/Views/userViews/address.ejs
@@ -99,14 +99,16 @@
                                     <div class="popup-wrapper">
                                         <div class="popup">
                                             <button class="close-btn"></button>
-                                            <form class="popup-form" action="/editAddress" method="POST">
+                                            <form class="popup-form" onsubmit="editAddresss(event)">
                                                 <h2 class="popup-form__title">Edit Address</h2>
-                                                <input type="text" class="popup-form__input" value="<%= address.name %>" name="name">
-                                                <input type="number" class="popup-form__input" value="<%= address.number %>" name="number">
-                                                <textarea class="popup-form__input" name="houseadd"><%= address.houseAddress %></textarea>
-                                                <input type="text" class="popup-form__input" value="<%= address.city %>" name="city">
-                                                <input type="text" class="popup-form__input" value="<%= address.street %>" name="street">
-                                                <input type="number" class="popup-form__input" value="<%= address.pin %>" name="pin">
+                                                <input type="hidden" class="popup-form__input" name="id" value="<%= address.id %>" id="editid">
+
+                                                <input type="text" class="popup-form__input" value="<%= address.name %>" name="name" id="editname" >
+                                                <input type="number" class="popup-form__input" value="<%= address.number %>" name="number" id="editnumber">
+                                                <textarea class="popup-form__input" name="houseadd" id="edithouseAdd"  ><%= address.houseAddress %></textarea>
+                                                <input type="text" class="popup-form__input" value="<%= address.city %>" name="city" id="editcity" >
+                                                <input type="text" class="popup-form__input" value="<%= address.street %>" name="street" id="editstreet" >
+                                                <input type="number" class="popup-form__input" value="<%= address.pin %>" name="pin" id="editpin" >
 
                                                 <button type="submit" class="popup-form__submit">Save</button>
                                             </form>
@@ -127,15 +129,15 @@
                             <div class="popup-wrapper">
                                 <div class="popup">
                                     <button class="close-btn"></button>
-                                    <form class="popup-form" action="/addNewAddress" method="POST">
+                                    <form class="popup-form" onsubmit="saveAddressedit(event)">
                                         <h2 class="popup-form__title">Add Address</h2>
-                                        <input type="text" class="popup-form__input" placeholder="Name" name="name">
-                                        <input type="number" class="popup-form__input" placeholder="Mobile Number" name="number">
-                                        <textarea class="popup-form__input" placeholder="House Address" name="houseadd"></textarea>
-                                        <input type="text" class="popup-form__input" placeholder="City" name="city">
-                                        <input type="text" class="popup-form__input" placeholder="Street" name="street">
-                                        <input type="number" class="popup-form__input" placeholder="PostalCode/PIN" name="pin">
-                                        <button type="submit" class="popup-form__submit">ADD</button>
+                                        <input type="text" class="popup-form__input" placeholder="Name" name="name" id="nameInput">
+                                        <input type="number" class="popup-form__input" placeholder="Mobile Number" name="number" id="mobileNumberInput">
+                                        <textarea class="popup-form__input" placeholder="House Address" name="houseadd" id="addressInput"></textarea>
+                                        <input type="text" class="popup-form__input" placeholder="City" name="city" id="cityInput">
+                                        <input type="text" class="popup-form__input" placeholder="Street" name="street" id="localityInput">
+                                        <input type="number" class="popup-form__input" placeholder="PostalCode/PIN" name="pin" id="pincodeInput">
+                                        <button type="submit" class="popup-form__submit" >ADD</button>
                                     </form>
                                 </div>
                             </div>
@@ -266,6 +268,205 @@
     function bodyScroll() {
         document.body.classList.toggle("no-scroll");
     }
+</script>
+
+
+<script>
+    // }
+            function saveAddressedit(event) {
+                event.preventDefault(); // Prevent form submission and page refresh
+        // Get references to the input fields
+        const nameInput = document.getElementById('nameInput');
+        const mobileNumberInput = document.getElementById('mobileNumberInput');
+        const addressInput = document.getElementById('addressInput');
+        const cityInput = document.getElementById('cityInput');
+        const localityInput = document.getElementById('localityInput');
+        const pincodeInput = document.getElementById('pincodeInput');
+
+        // Get the values from the input fields
+        const name = nameInput.value.trim();
+        const mobileNumber = mobileNumberInput.value.trim();
+        const address = addressInput.value.trim();
+        const city = cityInput.value.trim();
+        const locality = localityInput.value.trim();
+        const pincode = pincodeInput.value.trim();
+
+        function validate(name, mobileNumber, address, city, locality, pincode) {
+            // Perform validation
+            if (name === '') {
+            alert('Please enter a name.');
+            return false;
+            }
+
+            if (mobileNumber === '') {
+            alert('Please enter a mobile number.');
+            return false;
+            }
+
+            if (address === '') {
+            alert('Please enter a house address.');
+            return false;
+            }
+
+            if (city === '') {
+            alert('Please enter a city.');
+            return false;
+            }
+
+            if (locality === '') {
+            alert('Please enter a street.');
+            return false;
+            }
+
+            if (pincode === '') {
+            alert('Please enter a postal code/PIN.');
+            return false;
+            }
+
+            return true;
+        }
+
+        if (validate(name, mobileNumber, address, city, locality, pincode)) {
+            // Create an object with the form data
+            const formData = {
+            name: name,
+            number: mobileNumber,
+            houseAddress: address,
+            city: city,
+            street: locality,
+            pin: pincode
+            };
+
+            // Send the form data to the server using AJAX
+            fetch('/addNewAddress', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(formData)
+            })
+            //   .then(response => response.json())
+            .then((response)=>{
+                response.json()
+                location.reload()
+                
+
+            })
+            .then(data => {
+                // Handle the server response
+                // ...
+            })
+            .catch(error => {
+                // Handle any error that occurred during the request
+                console.error('Error:', error);
+            });
+            
+
+            // Prevent the default form submission
+            return false;
+        }
+        }
+    </script>
+
+<script>
+            function editAddresss(event) {
+            event.preventDefault(); // Prevent form submission and page refresh
+    // Get references to the input fields
+    const id = document.getElementById("editid").value;
+
+    const nameInput = document.getElementById('editname');
+    const mobileNumberInput = document.getElementById('editnumber');
+    const addressInput = document.getElementById('edithouseAdd');
+    const cityInput = document.getElementById('editcity');
+    const localityInput = document.getElementById('editstreet');
+    const pincodeInput = document.getElementById('editpin');
+
+    // Get the values from the input fields
+
+    const name = nameInput.value.trim();
+    const mobileNumber = mobileNumberInput.value.trim();
+    const address = addressInput.value.trim();
+    const city = cityInput.value.trim();
+    const locality = localityInput.value.trim();
+    const pincode = pincodeInput.value.trim();
+
+    function validate(name, mobileNumber, address, city, locality, pincode) {
+        // Perform validation
+        if (name === '') {
+        alert('Please enter a name.');
+        return false;
+        }
+
+        if (mobileNumber === '') {
+        alert('Please enter a mobile number.');
+        return false;
+        }
+
+        if (address === '') {
+        alert('Please enter a house address.');
+        return false;
+        }
+
+        if (city === '') {
+        alert('Please enter a city.');
+        return false;
+        }
+
+        if (locality === '') {
+        alert('Please enter a street.');
+        return false;
+        }
+
+        if (pincode === '') {
+        alert('Please enter a postal code/PIN.');
+        return false;
+        }
+
+        return true;
+    }
+
+    if (validate(name, mobileNumber, address, city, locality, pincode)) {
+        // Create an object with the form data
+        const formData = {
+            id:id,
+        name: name,
+        number: mobileNumber,
+        houseAddress: address,
+        city: city,
+        street: locality,
+        pin: pincode
+        };
+
+        // Send the form data to the server using AJAX
+        fetch('/editAddress', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(formData)
+        })
+        //   .then(response => response.json())
+        .then((response)=>{
+            response.json()
+            location.reload()
+            
+
+        })
+        .then(data => {
+            // Handle the server response
+            // ...
+        })
+        .catch(error => {
+            // Handle any error that occurred during the request
+            console.error('Error:', error);
+        });
+        
+
+        // Prevent the default form submission
+        return false;
+    }
+    }
+
 </script>
 
 </body>
