--- a/Views/userViews/category.ejs
+++ b/Views/userViews/category.ejs
@@ -76,7 +76,8 @@
 							<option value="1">Show 12</option>
 						</select>
 					</div> -->
-					<div class="pagination">
+					<!-- <div class="pagination">
+						<h3><%=category.name%></h3>
 						<a href="#" class="prev-arrow"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a>
 						<a href="#" class="active">1</a>
 						<a href="#">2</a>
@@ -84,7 +85,7 @@
 						<a href="#" class="dot-dot"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a>
 						<a href="#">6</a>
 						<a href="#" class="next-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-					</div>
+					</div> -->
 				</div>
 				<!-- End Filter Bar -->
 				<!-- Start Best Seller -->
@@ -131,7 +132,7 @@
 							<option value="1">Show 12</option>
 						</select>
 					</div> -->
-					<div class="pagination">
+					<!-- <div class="pagination">
 						<a href="#" class="prev-arrow"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a>
 						<a href="#" class="active">1</a>
 						<a href="#">2</a>
@@ -139,7 +140,7 @@
 						<a href="#" class="dot-dot"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a>
 						<a href="#">6</a>
 						<a href="#" class="next-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-					</div>
+					</div> -->
 				</div>
 				<!-- End Filter Bar -->
 			</div>
