--- a/Views/userViews/editProfile.ejs
+++ b/Views/userViews/editProfile.ejs
@@ -62,6 +62,16 @@
           <label>Phone Number</label>
           <input type="number" class="form-control" id="number" name="number" value="<%= userdata.number %>">
         </div>
+        <% if (typeof message !== 'undefined') { %>
+          <center>
+          <div class="audun_warn">
+              <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+              <%= message %>
+          </div>
+          </center>
+       
+          <% } %>
+          <br>
         <div class="col-md-12 form-group">
           <button type="submit" value="submit" class="primary-btn">Save Changes</button>
         </div>
@@ -94,6 +104,52 @@
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
 	<script src="js/gmaps.min.js"></script>
 	<script src="js/main.js"></script>
+
+  <!-- <script>
+		document.getElementById('verifyOtpBtn').addEventListener('click', async () => {
+			event.preventDefault(); // Prevent form submission
+			const otp = document.querySelector('input[name="otp"]').value;
+
+			try {
+				const response = await fetch('/verifyOTP', {
+					method: 'POST',
+					headers: {
+						'Content-Type': 'application/json'
+					},
+					body: JSON.stringify({ otp })
+				});
+
+				const data = await response.json();
+
+				if (response.ok) {
+					// Handle successful response
+					var otpbutton = document.querySelector('button.register1#sendOtpBtn');
+					otpbutton.style.display = 'none';
+
+					var button = document.querySelector('button.register2#verifyOtpBtn');
+					button.disabled = true;
+					button.innerHTML = 'Verified';
+					button.style.padding = '5px 21px'
+					button.style.backgroundColor = 'green';
+					button.style.color = 'white';
+
+
+					document.getElementById('success-message').textContent = data.message;
+					setTimeout(function () {
+						document.getElementById('success-message').textContent = '';
+					}, 3000);
+				} else {
+					// Handle error response
+					document.getElementById('error-message').textContent = data.message;
+					setTimeout(function () {
+						document.getElementById('error-message').textContent = '';
+					}, 3000);
+				}
+			} catch (error) {
+				console.log('An error occurred:', error.message);
+			}
+		});
+	</script> -->
 </body>
 
 </html>
