--- a/Views/userViews/orderDetails.ejs
+++ b/Views/userViews/orderDetails.ejs
@@ -28,6 +28,11 @@
 	<link rel="stylesheet" href="css/nouislider.min.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/main.css"> 
+
+	
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.css">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.js"></script>
 </head>
 
 <body>
@@ -181,27 +186,60 @@
 	<script src="js/gmaps.min.js"></script>
 	<script src="js/main.js"></script>
 
-	<script>
-		function cancelOrder(orderId,status)
-			{
-				console.log(orderId);
-				$.ajax({
-				url:'/cancelOrder',
-				method:'put',
-				data: {
-					orderId: orderId,
-					status:status
 
-				},
-				success:(response)=>
-				{
-					if(response)
-					{
-					location.reload()
-					}
-				}
-				})
-			  }
+	<script>
+		// function cancelOrder(orderId,status)
+		// 	{
+		// 		console.log(orderId);
+		// 		$.ajax({
+		// 		url:'/cancelOrder',
+		// 		method:'put',
+		// 		data: {
+		// 			orderId: orderId,
+		// 			status:status
+
+		// 		},
+		// 		success:(response)=>
+		// 		{
+		// 			if(response)
+		// 			{
+		// 			location.reload()
+		// 			}
+		// 		}
+		// 		})
+		// 	  }
+			function cancelOrder(orderId, status) {
+            Swal.fire({
+          title: 'Are you sure to cancel',
+          text: "You won't be able to revert this!",
+          icon: 'warning',
+          confirmButtonColor: '#3085d6',
+          cancelButtonColor: '#d33',
+          confirmButtonText: 'Yes, Cancel it!',
+          timer: 5000,
+          customClass: {
+          container: 'swal-wide', // Custom CSS class for the container
+            },
+        }).then((result) => {
+          if (result.isConfirmed) {
+            $.ajax({
+                url: '/cancelOrder',
+                method: 'put',
+                data: {
+                    orderId: orderId,
+                    status: status
+                },
+                success: (response) => {
+                    if (response) {
+                        location.reload()
+                    }
+                   
+                }
+            });
+          }
+          
+        })
+    }
 	</script>
 	
 </body>
