--- a/Views/userViews/product.ejs
+++ b/Views/userViews/product.ejs
@@ -49,27 +49,27 @@
 				<div class="col-lg-6">
 					<div class="s_Product_carousel">
 						<div class="single-prd-item">
-							<img class="img-fluid" src="/product-images/<%= product.image[0] %>" alt="">
+							<img class="img-fluid" src="/product-images/<%= product[0].image[0] %>" alt="">
 						</div>
 						<div class="single-prd-item">
-							<img class="img-fluid" src="/product-images/<%= product.image[1] %>" alt="">
+							<img class="img-fluid" src="/product-images/<%= product[0].image[1] %>" alt="">
 						</div>
 						<div class="single-prd-item">
-							<img class="img-fluid" src="/product-images/<%= product.image[2] %>" alt="">
+							<img class="img-fluid" src="/product-images/<%= product[0].image[2] %>" alt="">
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-5 offset-lg-1">
 					<div class="s_product_text">
-						<h3><%= product.name %></h3>
-						<h2><i class="fa fa-inr" aria-hidden="true"></i><%= product.price %></h2>
+						<h3><%= product[0].name %></h3>
+						<h2><i class="fa fa-inr" aria-hidden="true"></i><%= product[0].price %></h2>
 						<ul class="list">
-							<li><a class="active" href="#"><span>Category</span> : <%= product.category.name %></a></li>
+							<li><a class="active" href="#"><span>Category</span> : <%= product[0].category[0].name %></a></li>
 							<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 						</ul>
 						<p>Designed with avid gamers in mind, this cutting-edge device offers a host of features and capabilities to take your gaming experience to new heights. Unleash your gaming prowess, conquer new challenges, and experience the thrill of gaming at its finest. Elevate your gaming experience with the ultimate gaming gadget that takes you beyond imagination.</p>
 						<div class="card_area d-flex align-items-center">
-							<input type="button" class="primary-btn" onclick="addtocart('<%= product._id %>','<%= product.price %>');" value="Add to Cart">
+							<input type="button" class="primary-btn" onclick="addtocart('<%= product[0]._id %>','<%= product[0].price %>');" value="Add to Cart">
 
 						</div>
 					</div>
@@ -97,7 +97,7 @@
 			</ul>
 			<div class="tab-content" id="myTabContent">
 				<div class="tab-pane fade show active" id="review" role="tabpanel" aria-labelledby="review-tab">
-					<p><%= product.description %></p>
+					<p><%= product[0].description %></p>
 				</div>
 				<!-- {{!-- <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
 					<div class="table-responsive">
