--- a/Views/userViews/signup.ejs
+++ b/Views/userViews/signup.ejs
@@ -1,122 +1,240 @@
-<!DOCTYPE html>
 <html lang="zxx" class="no-js">
 <head>
-	<!-- Mobile Specific Meta -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
-	<!-- Author Meta -->
-	<meta name="author" content="CodePixar">
-	<!-- Meta Description -->
-	<meta name="description" content="">
-	<!-- Meta Keyword -->
-	<meta name="keywords" content="">
-	<!-- meta character set -->
-	<meta charset="UTF-8">
-	<!-- Site Title -->
-	<title>Karma Shop</title>
-	<!--CSS============================================= -->
-	<link rel="stylesheet" href="css/linearicons.css">
-	<link rel="stylesheet" href="css/owl.carousel.css">
-	<link rel="stylesheet" href="css/themify-icons.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/nice-select.css">
-	<link rel="stylesheet" href="css/nouislider.min.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/main.css">
+    <!-- Mobile Specific Meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="img/fav.png">
+    <!-- Author Meta -->
+    <meta name="author" content="CodePixar">
+    <!-- Meta Description -->
+    <meta name="description" content="">
+    <!-- Meta Keyword -->
+    <meta name="keywords" content="">
+    <!-- meta character set -->
+    <meta charset="UTF-8">
+    <!-- Site Title -->
+    <title>Karma Shop</title>
+    <!--CSS============================================= -->
+    <link rel="stylesheet" href="css/linearicons.css">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/nice-select.css">
+    <link rel="stylesheet" href="css/nouislider.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<!-- Start Header Area -->
-	<header class="header_area sticky-header">
-	</header>
+    <!-- Start Header Area -->
+    <header class="header_area sticky-header">
+    </header>
 
+    <!--================Login Box Area =================-->
+    <section class="login_box_area section_gap">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6" style="padding: 0%;">
+                    <div class="login_form_inner">
+                        <h3>Signup on the website</h3>
+                        <form class="row login_form" action="/signup" method="POST" id="contactForm" novalidate="novalidate">
+                            <div class="col-md-12 form-group">
+                                <input type="text" class="form-control" id="fname" name="fname" placeholder="First Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'First Name'">
+                            </div>
+                            <div class="col-md-12 form-group">
+                                <input type="text" class="form-control" id="lname" name="lname" placeholder="Last Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Last Name'">
+                            </div>
+                            <div class="col-md-12 form-group">
+                                <input type="email" class="form-control" id="email" name="email" placeholder="E-mail" onfocus="this.placeholder = ''" onblur="this.placeholder = 'E-mail'">
+                            </div>
+                            <div class="col-md-12 form-group">
+                                <input type="password" class="form-control" id="password" name="password" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
+                            </div>
+                            <div class="col-md-12 form-group">
+                                <input type="number" class="form-control" id="number" name="number" placeholder="Phone Number" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone Number'">
+                            </div>
+                            <div class="col-md-12 form-group">
+                                <% if (typeof message !== 'undefined') { %>
+                                <center>
+                                <div class="audun_warn">
+                                    <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                                    <%= message %>
+                                </div>
+                                </center>
+                                <% } %>
+                            </div>
+                            <div class="col-md-12 form-group">
+                                <button type="submit" value="submit" class="primary-btn">Sign Up</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-6" style="padding: 0%;">
+                    <div class="login_box_img">
+                        <img class="img-fluid" src="img/login cover.jpg" alt="">
+                        <div class="hover">
+                            <h4>Already have an account?</h4>
+                            <p>There are advances being made in science and technology everyday, and a good example of this is the</p>
+                            <a class="primary-btn" href="/login">Login to your Account</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--================End Login Box Area =================-->
 
+    <!-- start footer Area -->
+    <%- include('../layouts/userFooter.ejs') %>
+    <!-- End footer Area -->
 
+    <script src="js/vendor/jquery-2.2.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+     crossorigin="anonymous"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/jquery.ajaxchimp.min.js"></script>
+    <script src="js/jquery.nice-select.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/nouislider.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <!--gmaps Js-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+    <script src="js/gmaps.min.js"></script>
+    <script src="js/main.js"></script>
 
+    <!-- <script>
+        // Create an object to store the form data
+        const formData = {};
 
+        function validateForm() {
+            // Get references to the input fields
+            const fnameInput = document.getElementById('fname');
+            const lnameInput = document.getElementById('lname');
+            const emailInput = document.getElementById('email');
+            const passwordInput = document.getElementById('password');
+            const numberInput = document.getElementById('number');
 
-	<!--================Login Box Area =================-->
-	<section class="login_box_area section_gap">
-		<div class="container">
-			<div class="row">
-				
-				<div class="col-lg-6" style="padding: 0%;">
-					<div class="login_form_inner" >
-						<h3>Signup on the website</h3>
-						<form class="row login_form" action="/signup" method="POST" id="contactForm" novalidate="novalidate">
-							<div class="col-md-12 form-group">
-								<input type="text" class="form-control" id="fname" name="fname" placeholder="First Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'First Name'">
-							</div>
-							<div class="col-md-12 form-group">
-								<input type="text" class="form-control" id="lname" name="lname" placeholder="Last Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Last Name'">
-							</div>
-							<div class="col-md-12 form-group">
-								<input type="email" class="form-control" id="email" name="email" placeholder="E-mail" onfocus="this.placeholder = ''" onblur="this.placeholder = 'E-mail'">
-							</div>
-							<div class="col-md-12 form-group">
-								<input type="password" class="form-control" id="password" name="password" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
-							</div>
-							<div class="col-md-12 form-group">
-								<input type="number" class="form-control" id="number" name="number" placeholder="Phone Number" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone Number'">
-							</div>
-							<div class="col-md-12 form-group">
-							<% if (typeof message !== 'undefined') { %>
-								<center>
-								<div class="audun_warn">
-									<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-									<%= message %>
-								</div>
-								</center>
-							<% } %>
-							</div>
-							<div class="col-md-12 form-group">
-								<button type="submit" value="submit" class="primary-btn">Sign Up</button>
+            // Get the values from the input fields
+            formData.fname = fnameInput.value.trim();
+            formData.lname = lnameInput.value.trim();
+            formData.email = emailInput.value.trim();
+            formData.password = passwordInput.value.trim();
+            formData.number = numberInput.value.trim();
 
-							</div>
-						</form>
-					</div>
-				</div>
-				<div class="col-lg-6" style="padding: 0%;">
-					<div class="login_box_img">
-						<img class="img-fluid" src="img/login cover.jpg" alt="">
-						<div class="hover">
-							<h4>Already have an account?</h4>
-							<p>There are advances being made in science and technology everyday, and a good example of this is the</p>
-							<a class="primary-btn" href="/login">Login to your Account</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--================End Login Box Area =================-->
+            // Regular expressions for validation
+            const nameRegex = /^[a-zA-Z\s]+$/;
+            const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            const passwordRegex = /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}$/;
+            const numberRegex = /^\d+$/;
 
+            // Track if the form is valid or not
+            let isValid = true;
 
+            // Remove existing error messages
+            const errorElements = document.getElementsByClassName('error-message');
+            while (errorElements[0]) {
+                errorElements[0].parentNode.removeChild(errorElements[0]);
+            }
 
+            // Validate first name
+            if (formData.fname === '') {
+                displayErrorMessage(fnameInput, 'Please enter your first name.');
+                isValid = false;
+            } else if (!nameRegex.test(formData.fname)) {
+                displayErrorMessage(fnameInput, 'Please enter a valid first name.');
+                isValid = false;
+            }
 
+            // Validate last name
+            if (formData.lname === '') {
+                displayErrorMessage(lnameInput, 'Please enter your last name.');
+                isValid = false;
+            } else if (!nameRegex.test(formData.lname)) {
+                displayErrorMessage(lnameInput, 'Please enter a valid last name.');
+                isValid = false;
+            }
 
+            // Validate email
+            if (formData.email === '') {
+                displayErrorMessage(emailInput, 'Please enter your email address.');
+                isValid = false;
+            } else if (!emailRegex.test(formData.email)) {
+                displayErrorMessage(emailInput, 'Please enter a valid email address.');
+                isValid = false;
+            }
 
+            // Validate password
+            if (formData.password === '') {
+                displayErrorMessage(passwordInput, 'Please enter your password.');
+                isValid = false;
+            } else if (!passwordRegex.test(formData.password)) {
+                displayErrorMessage(
+                    passwordInput,
+                    'Password must contain at least 6 characters, including at least one digit, one lowercase letter, and one uppercase letter.'
+                );
+                isValid = false;
+            }
 
+            // Validate phone number
+            if (formData.number === '') {
+                displayErrorMessage(numberInput, 'Please enter your phone number.');
+                isValid = false;
+            } else if (!numberRegex.test(formData.number)) {
+                displayErrorMessage(numberInput, 'Please enter a valid phone number.');
+                isValid = false;
+            }
 
-	<!-- start footer Area -->
-	<%- include('../layouts/userFooter.ejs') %>
-	<!-- End footer Area -->
+            return isValid;
+        }
 
+        function displayErrorMessage(inputElement, message) {
+            const errorMessage = document.createElement('div');
+            errorMessage.classList.add('error-message');
+            errorMessage.textContent = message;
 
-	<script src="js/vendor/jquery-2.2.4.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-	 crossorigin="anonymous"></script>
-	<script src="js/vendor/bootstrap.min.js"></script>
-	<script src="js/jquery.ajaxchimp.min.js"></script>
-	<script src="js/jquery.nice-select.min.js"></script>
-	<script src="js/jquery.sticky.js"></script>
-	<script src="js/nouislider.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<!--gmaps Js-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
-	<script src="js/gmaps.min.js"></script>
-	<script src="js/main.js"></script>
+            const parentElement = inputElement.parentNode;
+            parentElement.appendChild(errorMessage);
+        }
+
+		document.getElementById('contactForm').addEventListener('submit', function (event) {
+  event.preventDefault(); // Prevent form submission
+
+  if (validateForm()) {
+    const xhr = new XMLHttpRequest(); // Create a new XMLHttpRequest object
+
+    xhr.open('POST', '/signup', true); // Specify the POST request details
+    xhr.setRequestHeader('Content-Type', 'application/json'); // Set the request header
+
+    // Get the form data
+    const formData = {
+      fname: document.getElementById('fname').value.trim(),
+      lname: document.getElementById('lname').value.trim(),
+      email: document.getElementById('email').value.trim(),
+      password: document.getElementById('password').value.trim(),
+      number: document.getElementById('number').value.trim()
+    };
+
+    // Convert the form data to JSON
+    const jsonData = JSON.stringify(formData);
+
+    xhr.onload = function () {
+      if (xhr.status === 200) {
+        // Handle the successful response
+        console.log('Form submitted successfully');
+      } else {
+        // Handle the error response
+        console.error('Error:', xhr.status);
+      }
+    };
+
+    xhr.onerror = function () {
+      // Handle any network errors
+      console.error('Network Error');
+    };
+
+    xhr.send(jsonData); // Send the request with the form data as JSON
+  }
+});
+    </script> -->
 </body>
-
 </html>
