--- a/Views/userViews/cart.ejs
+++ b/Views/userViews/cart.ejs
@@ -131,7 +131,7 @@
                             <div class="typography" style=" text-align: start; ">
                                 <h1>THERE IS NO ITEMS IN CART</h1>
                             </div>
-                            <img src="../img/empty cart.jpg" alt="" style="height: 400px; width: 100%;">
+                            <img src="../img/empty cart.webp" alt="" style="height: 400px; width: 90%;">
                         </div>
                     </center>
                     <% } %>
