--- a/Views/adminViews/addBanner.ejs
+++ b/Views/adminViews/addBanner.ejs
@@ -22,17 +22,17 @@
     id="myform">
       <div class="form-group">
         <label for="exampleInputName1">Title</label>
-        <input type="text" class="form-control" id="name" name="title">
+        <input type="text" class="form-control" id="name" name="title" required>
         <p id="error1" class="text-danger"></p>
       </div>
       <div class="form-group">
         <label for="exampleTextarea1">Description</label>
-        <textarea class="form-control" id="description" rows="4" name="description"></textarea>
+        <textarea class="form-control" id="description" rows="4" name="description" required></textarea>
         <p id="error3" class="text-danger"></p>
       </div>
       <div class="form-group">
         <label for="productImage">Image:</label>
-        <input type="file" class="form-control" name="image" id="image">
+        <input type="file" class="form-control" name="image" id="image" required>
       </div>
 
       <% if (typeof message !== 'undefined') { %>
