--- a/Views/adminViews/addCategory.ejs
+++ b/Views/adminViews/addCategory.ejs
@@ -21,12 +21,12 @@
             <form class="forms-sample" action="/admin/addCategory" method="POST">
               <div class="form-group">
                 <label for="exampleInputName1">Name</label>
-                <input type="text" class="form-control" id="name" name="name">
+                <input type="text" class="form-control" id="name" name="name" required>
                 <p id="error1" class="text-danger"></p>
               </div>
               <div class="form-group">
                 <label for="exampleTextarea1">Description</label>
-                <textarea class="form-control" id="description" rows="4" name="des"></textarea>
+                <textarea class="form-control" id="description" rows="4" name="des" required></textarea>
                 <p id="error3" class="text-danger"></p>
               </div>
               <% if (typeof message !== 'undefined') { %>
