--- a/Views/adminViews/addCoupon.ejs
+++ b/Views/adminViews/addCoupon.ejs
@@ -23,7 +23,7 @@
       <div class="form-group">
         <label for="exampleInputName1">Coupon Code</label>
         <div class="input-group">
-            <input type="text" class="form-control"  aria-label="Recipient's username" aria-describedby="basic-addon2" id="couponName" name="couponCode">
+            <input type="text" class="form-control"  aria-label="Recipient's username" aria-describedby="basic-addon2" id="couponName" name="couponCode" required>
             <div class="input-group-append">
                 <button class="btn btn-sm btn-primary" type="button" onclick="generateCoupon()">Generate Code</button>
             </div>
@@ -36,7 +36,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text bg-primary text-white">₹</span>
           </div>
-          <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="minPurchase">
+          <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="minPurchase" required>
           <div class="input-group-append">
             <span class="input-group-text">.00</span>
           </div>
@@ -49,7 +49,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text bg-primary text-white">₹</span>
           </div>
-          <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="maxDiscountValue">
+          <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="maxDiscountValue" required>
           <div class="input-group-append">
             <span class="input-group-text">.00</span>
           </div>
@@ -59,7 +59,7 @@
       <div class="form-group">
         <label for="exampleInputName1">Discount</label>
         <div class="input-group">
-          <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="minDiscountPercentage">
+          <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" name="minDiscountPercentage" required>
           <div class="input-group-append">
             <span class="input-group-text">%</span>
           </div>
@@ -68,13 +68,13 @@
 
       <div class="form-group">
         <label for="exampleInputName1">Validity</label>
-        <input type="date" class="form-control" name="validity">
+        <input type="date" class="form-control" name="validity" required>
         <p id="error1" class="text-danger"></p>
       </div>
       
       <div class="form-group">
         <label for="exampleTextarea1">Description</label>
-        <textarea class="form-control" rows="4" name="description"></textarea>
+        <textarea class="form-control" rows="4" name="description" required></textarea>
         <p id="error3" class="text-danger"></p>
       </div>
       <% if (typeof message !== 'undefined') { %>
