--- a/Views/adminViews/adminLogin.ejs
+++ b/Views/adminViews/adminLogin.ejs
@@ -1,69 +1,76 @@
-
 <!DOCTYPE html>
 <html>
-	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>Corona Admin</title>
-		<!-- plugins:css -->
-		<link rel="stylesheet" href="../../assets/vendors/mdi/css/materialdesignicons.min.css">
-		<link rel="stylesheet" href="../../assets/vendors/css/vendor.bundle.base.css">
-		<!-- endinject -->
-		<!-- Plugin css for this page -->
-		<!-- End plugin css for this page -->
-		<!-- inject:css -->
-		<!-- endinject -->
-		<!-- Layout styles -->
-		<link rel="stylesheet" href="../../assets/css/style.css">
-		<!-- End layout styles -->
-		<link rel="shortcut icon" href="../../assets/images/favicon.png" />
-	  </head>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>ProGear</title>
+    <!-- plugins:css -->
+    <link
+      rel="stylesheet"
+      href="../../assets/vendors/mdi/css/materialdesignicons.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../../assets/vendors/css/vendor.bundle.base.css"
+    />
+    <link rel="stylesheet" href="../../assets/css/style.css" />
+    <!-- End layout styles -->
+    <link rel="shortcut icon" href="../../assets/images/favicon.png" />
+  </head>
 
-	 <!-- <br>
-	<br>
-	<br>
-	<div class="container">
-		<div class="row">
-		  <div class="col-md-3"></div>
-		  <div class="col-md-lg-6 main">
-			
-			<h1 class="logo">Pro<span>Gear</span> </h1>
-			<form action="/admin/login" method="post">
-			  <h1 class="heading">Admin Login</h1><br>
-			  <input class="box" type="text" name="email" id="email" placeholder="E-mail" required /><br>
-			  <input class="box" type="password" name="password" id="password" placeholder="Password" required/><br>																							 -->
-			  <!-- <input type="submit" id="submitDetails" value="Submit" /><br>
-			</form>
-		  </div>	
-		  <div class="col-md-3"></div>
-		</div>
-	  </div>	  
-</body>  --> 
-
-<body>
+  <body>
     <div class="container-scroller">
       <div class="container-fluid page-body-wrapper full-page-wrapper">
         <div class="row w-100 m-0">
-          <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
-            <div class="card col-lg-4 mx-auto">
+          <div
+            class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg"
+          >
+            <div
+              class="card col-lg-4 mx-auto"
+              style="background-color: rgba(0, 0, 0, 0.5)"
+            >
               <div class="card-body px-5 py-5">
-                <h3 class="card-title text-left mb-3">Admin Login</h3>
-                <form  action="/admin/login" method="post" >
+                <h3 class="card-title text-center mb-3">
+                 Admin Login
+                </h3>
+                <br />
+                <form action="/admin/login" method="post">
                   <div class="form-group">
                     <label>Username or email *</label>
-                    <input type="text" name="email" id="email" placeholder="E-mail" required  class="form-control p_input">
+                    <input
+                      type="text"
+                      name="email"
+                      id="email"
+                      placeholder="E-mail"
+                      required
+                      class="form-control p_input"
+                    />
                   </div>
                   <div class="form-group">
                     <label>Password *</label>
-                    <input type="password" name="password" id="password" placeholder="Password" required class="form-control p_input">
+                    <input
+                      type="password"
+                      name="password"
+                      id="password"
+                      placeholder="Password"
+                      required
+                      class="form-control p_input"
+                    />
                   </div>
-                  <br>
-                 
+                  <br />
+
                   <div class="text-center">
-                    <button type="submit" class="btn btn-primary btn-block enter-btn">Login</button>
+                    <button
+                      type="submit"
+                      class="btn btn-primary btn-block enter-btn"
+                    >
+                      Login
+                    </button>
                   </div>
-                 
                 </form>
               </div>
             </div>
