--- a/Views/adminViews/updateCategory.ejs
+++ b/Views/adminViews/updateCategory.ejs
@@ -20,11 +20,11 @@
             <form class="forms-sample" action="/admin/updateCategory" method="POST">
               <div class="form-group">
                 <label for="exampleInputName1">Name</label>
-                <input type="text" class="form-control" id="exampleInputName1" name="name" value="<%= category.name %>">
+                <input type="text" class="form-control" id="exampleInputName1" name="name" value="<%= category.name %>" required>
               </div>
               <div class="form-group">
                 <label for="exampleTextarea1">Description</label>
-                <textarea class="form-control" id="exampleTextarea1" rows="4" name="des"><%= category.description %></textarea>
+                <textarea class="form-control" id="exampleTextarea1" rows="4" name="des" required><%= category.description %></textarea>
               </div>
 
               <input type="hidden" name="id" value="<%= category._id %>">
