--- a/Views/adminViews/updateProduct.ejs
+++ b/Views/adminViews/updateProduct.ejs
@@ -9,8 +9,6 @@
       border-radius: 4px;
       margin-right: 50px;
       margin-left: 50px;
-
-
     }
   </style>
   <!-- partial -->
@@ -36,11 +34,11 @@
               <form class="forms-sample" action="/admin/updateProduct" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                   <label for="exampleInputName1">Name</label>
-                  <input type="text" class="form-control" id="exampleInputName1" placeholder="Name" name="name" value="<%= product.name %>">
+                  <input type="text" class="form-control" id="exampleInputName1" placeholder="Name" name="name" value="<%= product.name %>" required>
                 </div>
                 <div class="form-group">
                   <label for="exampleInputEmail3">Brand</label>
-                  <input type="text" class="form-control" id="exampleInputEmail3" placeholder="Brand" name="brand" value="<%= product.brand %>">
+                  <input type="text" class="form-control" id="exampleInputEmail3" placeholder="Brand" name="brand" value="<%= product.brand %>" required>
                 </div>
                 <div class="form-group">
                   <label for="exampleSelectGender">Category</label>     
@@ -90,7 +88,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> 
 
           <!-- content-wrapper ends -->
           <!-- partial:../../partials/_footer.html -->
