--- a/Views/userViews/landing.ejs
+++ b/Views/userViews/landing.ejs
@@ -279,51 +279,54 @@
     
 	<script>
 		function addtocart(proId,price) {
-		  $.ajax({
-			url: '/addToCart/' + proId + '/' + price,
-			method: 'POST',
-	  
-			success: (response) => {
-			  if (response.status) {
-				Swal.fire({
-					title: 'Added To Cart',
-					text: 'Your Product has been added to Cart',
-					icon: 'success',
-					timer: 5000,
-					confirmButtonColor: '#e47312',
-					showCancelButton: true,
-					cancelButtonColor: '#e47312',
-					confirmButtonText: 'View Cart',
-					cancelButtonText: 'Continue Shopping'
-				}).then((result) => {
-					if (result.isConfirmed) {
-						location.href = '/cart';
-					} else {
-						Swal.close();
-					}
+			$.ajax({
+				url: '/addToCart/' + proId + '/' + price,
+				method: 'POST',
+		
+				success: (response) => {
+				if (response.status) {
+					console.log('res',response.status);
+					Swal.fire({
+						title: 'Added To Cart',
+						text: 'Your Product has been added to Cart',
+						icon: 'success',
+						timer: 5000,
+						confirmButtonColor: '#e47312',
+						showCancelButton: true,
+						cancelButtonColor: '#e47312',
+						confirmButtonText: 'View Cart',
+						cancelButtonText: 'Continue Shopping'
+					}).then((result) => {
+						if (result.isConfirmed) {
+							location.href = '/cart';
+						} else {
+							Swal.close();
+						}
 					});
-				
-			  }
-			}
-		  })
+				}
+				},
+				error: () => {
+					location.href = '/login';
+				}
+			})
 		}
 	</script>
 
-<script>
-	// Set the interval time (in milliseconds)
-	const intervalTime = 5000; // Change this value to adjust the scrolling speed
-  
-	// Get the banner slider element
-	const bannerSlider = document.querySelector('#bannerSlider');
-  
-	// Function to scroll the slider
-	const scrollSlider = () => {
-	  $('.carousel').carousel('next');
-	};
-  
-	// Start the interval to scroll the slider
-	setInterval(scrollSlider, intervalTime);
-  </script>
+	<script>
+		// Set the interval time (in milliseconds)
+		const intervalTime = 5000; // Change this value to adjust the scrolling speed
+	
+		// Get the banner slider element
+		const bannerSlider = document.querySelector('#bannerSlider');
+	
+		// Function to scroll the slider
+		const scrollSlider = () => {
+		$('.carousel').carousel('next');
+		};
+	
+		// Start the interval to scroll the slider
+		setInterval(scrollSlider, intervalTime);
+	</script>
 </body> 
 
 </html>
